# nameback

./: .gitignore  .security-controls-version  ANTIVIRUS_FALSE_POSITIVE.md  CLAUDE.md  Cargo.toml  INSTALLER_UI_IMPROVEMENTS.md  PHASE_3_PLAN.md  README.md  REFACTORING_SESSION.md  RELEASE_NOTES_TEMPLATE.md  RELEASING.md  deny.toml  release.toml  renovate.json  test_geocoding.rs
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: code-review.md  service-documentation.md
.github/workflows/: bundle-dependencies.yml  cargo-deny.yml  codeql.yml  manual-release.yml  pinning-validation.yml  release-new.yml  release-v2.yml  release.yml  renovate.yml  security.yml
.security-controls/: config.env  gitleaks.toml  renovate-workflow.yml.template  renovate.json.template  secret-allowlist.txt
LICENSES/: Apache-2.0.txt  GPL-1.0-or-later.txt  ImageMagick.txt  LGPL-2.1-or-later.txt
assets/: README.md
debian/: changelog  control  copyright  nameback.desktop  rules
docs/: GUIDE.md  KALI_PACKAGING.md  README.md  naming-heuristics.md
docs/architecture/: bundled-dependencies-implementation.md  bundled-dependencies-legal-analysis.md
docs/dev/: refactoring-opportunities.md  refactoring-plan.md  tdd-implementation.md
docs/security/: architecture.md
installer/: add-scoop-to-path-with-ui.ps1  add-scoop-to-path.ps1  install-dependencies-with-ui.ps1  install-dependencies.ps1  install-deps-silent.ps1  install-deps-with-progress.ps1  install-deps.vbs  nameback.wxs
nameback-cli/: Cargo.toml
nameback-cli/src/: cli.rs  main.rs
nameback-core/: Cargo.toml
nameback-core/src/: code_docstring.rs  deps.rs  deps_check.rs  detector.rs  dir_context.rs  extractor.rs  generator.rs  geocoding.rs  image_ocr.rs  key_phrases.rs  lib.rs  location_timestamp.rs  metadata_cache.rs  pdf_content.rs  rename_history.rs  renamer.rs  scorer.rs  series_detector.rs  stem_analyzer.rs  text_content.rs  video_ocr.rs
nameback-core/src/format_handlers/: archive.rs  email.rs  mod.rs  web.rs
nameback-gui/: Cargo.toml  build.rs
nameback-gui/src/: app.rs  main.rs
scripts/: prepare-bundled-deps-windows.sh
sessions/: sessions-config.json
sessions/hooks/: post_tool_use.py
sessions/tasks/: m-implement-file-metadata-renamer.md
sessions/tasks/done/: h-kickstart-setup.md  m-implement-file-metadata-renamer.md
src/: cli.rs  detector.rs  extractor.rs  generator.rs  image_ocr.rs  location_timestamp.rs  main.rs  pdf_content.rs  renamer.rs  scorer.rs  series_detector.rs  text_content.rs  video_ocr.rs
src/format_handlers/: email.rs
