[package]
name = "nameback"
version = "0.2.3"
edition = "2021"
authors = ["Albert Hui"]
description = "Rename files based on their metadata with multi-language OCR, HEIC support, and video frame extraction"
license = "MIT"
repository = "https://github.com/h4x0r/nameback"
homepage = "https://github.com/h4x0r/nameback"
readme = "README.md"
keywords = ["metadata", "rename", "ocr", "exif", "heic"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
pdf-extract = "0.7"
tesseract = "0.14"
image = "0.25"
infer = "0.16"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Security enhancements
[profile.release]
# Enable integer overflow checks in release builds for security
overflow-checks = true
