[workspace]
members = [
    "nameback-core",
    "nameback-cli",
    "nameback-gui",
]
resolver = "2"

[workspace.package]
version = "0.6.43"
edition = "2021"
authors = ["Albert Hui"]
license = "MIT"
repository = "https://github.com/h4x0r/nameback"
homepage = "https://github.com/h4x0r/nameback"

[workspace.dependencies]
# Workspace member (for internal dependencies)
nameback-core = { version = "0.6.43", path = "nameback-core" }

# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
log = "0.4"
walkdir = "2.4"
chrono = "0.4"
infer = "0.16"
rayon = "1.10"

# File format handling
pdf-extract = "0.7"
image = "0.25"

# OCR
tesseract = "0.14"

# CLI
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"

# GUI
eframe = "0.29"
egui = "0.29"
rfd = "0.15"
tokio = { version = "1", features = ["rt", "sync", "macros"] }

# HTTP
reqwest = { version = "0.11", features = ["blocking", "json"] }
lazy_static = "1.4"

# Platform-specific
libc = "0.2"

# Testing
tempfile = "3.8"

# Security enhancements for all release builds
[profile.release]
overflow-checks = true
